// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object fields additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_foo"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_foo"
                id="TextFieldLabel11"
              >
                foo
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_foo__error root_foo__description root_foo__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel11"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_foo"
                  name="root_foo"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__12"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_a"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_a"
                id="TextFieldLabel2"
              >
                A
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel2"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          id="root_b"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_b"
                id="TextFieldLabel5"
              >
                B
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel5"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__6"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_additionalProperty"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_additionalProperty"
                id="TextFieldLabel17"
              >
                additionalProperty
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel17"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_additionalProperty"
                  name="root_additionalProperty"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="should appear"
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__18"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-74"
      id="root__title"
    >
      Test field
    </label>
    <span
      className="css-75"
      id="root__description"
    >
      a test description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_foo"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_foo"
                id="TextFieldLabel32"
              >
                foo
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_foo__error root_foo__description root_foo__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel32"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_foo"
                  name="root_foo"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__33"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from both additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-74"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-75"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_foo"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_foo"
                id="TextFieldLabel74"
              >
                foo
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_foo__error root_foo__description root_foo__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel74"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_foo"
                  name="root_foo"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__75"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from both object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-74"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-75"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_a"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_a"
                id="TextFieldLabel65"
              >
                My Item A
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel65"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-75"
          >
            a fancier item A description
          </span>
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          id="root_b"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_b"
                id="TextFieldLabel68"
              >
                My Item B
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel68"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-75"
          >
            a fancier item B description
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__69"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-74"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-75"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_foo"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_foo"
                id="TextFieldLabel53"
              >
                foo
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_foo__error root_foo__description root_foo__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel53"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_foo"
                  name="root_foo"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__54"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-74"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-75"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_a"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_a"
                id="TextFieldLabel44"
              >
                My Item A
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel44"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-75"
          >
            a fancier item A description
          </span>
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          id="root_b"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_b"
                id="TextFieldLabel47"
              >
                My Item B
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel47"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-75"
          >
            a fancier item B description
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__48"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-74"
      id="root__title"
    >
      My Field
    </label>
    <span
      className="css-75"
      id="root__description"
    >
      a fancier description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_additionalProperty"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_additionalProperty"
                id="TextFieldLabel59"
              >
                additionalProperty
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel59"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_additionalProperty"
                  name="root_additionalProperty"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="should appear"
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__60"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-74"
      id="root__title"
    >
      Test field
    </label>
    <span
      className="css-75"
      id="root__description"
    >
      a test description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_a"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_a"
                id="TextFieldLabel23"
              >
                A
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel23"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-75"
          >
            A description
          </span>
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          id="root_b"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_b"
                id="TextFieldLabel26"
              >
                B
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel26"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-75"
          >
            B description
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__27"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-74"
      id="root__title"
    >
      Test field
    </label>
    <span
      className="css-75"
      id="root__description"
    >
      a test description
    </span>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_additionalProperty"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-65"
                htmlFor="root_additionalProperty"
                id="TextFieldLabel38"
              >
                additionalProperty
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel38"
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_additionalProperty"
                  name="root_additionalProperty"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="should appear"
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__39"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description with global label off additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_foo"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_foo__error root_foo__description root_foo__help"
                  aria-invalid={false}
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_foo"
                  name="root_foo"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="foo"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__90"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description with global label off object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_a"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_a__error root_a__description root_a__help"
                  aria-invalid={false}
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Grid-col ms-sm12  field field-number"
          id="root_b"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_b__error root_b__description root_b__help"
                  aria-invalid={false}
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__84"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`object fields with title and description with global label off show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_additionalProperty"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-54"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-55"
              >
                <input
                  aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                  aria-invalid={false}
                  autoFocus={false}
                  className="ms-TextField-field field-56"
                  disabled={false}
                  id="root_additionalProperty"
                  name="root_additionalProperty"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value="should appear"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-66"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-67"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-68"
          >
            <span
              className="ms-Button-label label-70"
              id="id__96"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;
